# MagicEngine

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
src/: CMakeLists.txt  Engine.h
